--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -280,7 +280,7 @@ sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen P
 
   Für diese Diplomarbeit wurde die + Konfiguration für Hexacopter gewählt.
 
-  Wie auf folgender Grafik ersichtlich ist, gibt es nach links und nach rechts drehende Rotoren. Die rot gekennzeichneten Arme geben an, wo die Vorderseite des Multicopters ist. Bei der Y-Konfiguration sind die blau Makierten Propeller oben, die roten unten.
+  Wie auf folgender Grafik\cite{NAZA_Konfig} ersichtlich ist, gibt es nach links und nach rechts drehende Rotoren. Würden sich alle in die selbe Richtung drehen, würde sich der Multicopter um die eigene Hochachse drehen. Die rot gekennzeichneten Arme geben an, wo die Vorderseite des Multicopters ist. Bei der Y-Konfiguration sind die blau Makierten Propeller oben, die roten unten. 
 
     \begin{figure}[H]
       \begin{centering}
@@ -291,7 +291,7 @@ sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen P
     \end{figure}
 
   \subsection{Mögliche Anwendungsgebiete}
-  Multicopter finden in vielen Bereichen Anwendung. \cite{copterAnwendung}
+  Multicopter finden in vielen Bereichen Anwendung\cite{copterAnwendung}. 
   \begin{itemize}
     \item Fotographie und Videos / Filmindustrie / Anfertigen von hoch aufgelösten Luftbildkarten
     \item Multicopter als Hobby / Kunstflug
@@ -316,7 +316,7 @@ sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen P
 
     \subsubsection{Steuerungsarten}
     Autor: Christina Bornberg\\
-    Der Flightcontroller DJI NAZA-M lite wird über die Befehle Aileron, Elevator, Rudder und Throttle gesteuert. Zusätzlich gibt es den 2/3-position mode channel, der für das Umschalten mehrerer Modei zuständig ist. Handelsübliche Fernbedienungen verfügen über die selben Steuerbefehle. \cite{GrundlagenMulticopter}
+    Der Flightcontroller DJI NAZA-M lite wird über die Befehle\cite{GrundlagenMulticopter} Aileron, Elevator, Rudder und Throttle gesteuert. Zusätzlich gibt es den 2/3-position mode channel, der für das Umschalten mehrerer Modei zuständig ist. Handelsübliche Fernbedienungen verfügen über die selben Steuerbefehle. 
 
       \begin{itemize}
         \item \textbf{A: Aileron} auch Rollen (engl. roll) genannt, ist für die Bewegung nach Links und Rechts zuständig.
@@ -327,7 +327,7 @@ sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen P
         Um den Hexacopter um seine eigene Hochachse rotieren zu lassen, werden für eine Rotation nach rechts, die rechts-drehenden Rotoren schneller betrieben, bei der Rotation nach Links, die links-drehenden.
         \item \textbf{T: Throttle} reguliert die Höhe.
         Bei gleichmäßiger Ansteuerung der 6 Rotoren, kann man je nach Drehgeschwindigkeit die Höhe verändern. Der Hexacopter fliegt bei stärkerer Beschleunigung nach oben, ansonsten sinkt er. Dies wird auch als Uplift and Downfall bezeichnet.
-        \item \textbf{U: 2/3-position switch channel} ist zum Umschalten von zwei oder drei Steuermodi zuständig. Im Fall unserer Diplomarbeit wird zwischen autonomem und manuellem Flug gewechselt. \cite{positionswitch}
+        \item \textbf{U: 2/3-position switch channel}\cite{positionswitch}ist zum Umschalten von zwei oder drei Steuermodi zuständig. Im Fall unserer Diplomarbeit wird zwischen autonomem und manuellem Flug gewechselt. 
       \end{itemize}
 
     \begin{figure}[H]
