--- a/Positionierung.tex
+++ b/Positionierung.tex
@@ -227,11 +227,11 @@
       Durch das Senden eines Signals von jedem Pseudolite zum Empfänger, können 3 Distanzen berechnet werden.
       Aus diesen 3 Distanzen und der bekannten Koordinaten der Pseudolites, wird die augenblickliche Position mittels Trilateration des Hexacopters berechnet.
 
-%\[
-%      Distanz 1 = (x1 - x)^2 + (y1 - y)^2 + (z1 - z)^2
-%      Distanz 2 = (x2 - x)^2 + (y2 - y)^2 + (z2 - z)^2
-%      Distanz 3 = (x3 - x)^2 + (y3 - y)^2 + (z3 - z)^2
-%\]
+\[
+      Distanz 1 = (x1 - x)^{2} + (y1 - y)^{2} + (z1 - z)^{2}
+      Distanz 2 = (x2 - x)^{2} + (y2 - y)^{2} + (z2 - z)^{2}
+      Distanz 3 = (x3 - x)^{2} + (y3 - y)^{2} + (z3 - z)^{2}
+\]
 
       Distanz ... ist die durchgeführte Messung\\
       x1, y1, ... z2, z3 ... sind die staatischen Koordinaten der Pseudolites \\
