--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -19,7 +19,7 @@ Die View-Ebene dient dazu die Daten visuell darzustellen. Dadurch können die Sp
 Um die dadurch entstandene Sass-Datei in den Twig beziehungsungsweise HTML-Dateien einbinden zu können wurde sie mithilfe des Task-Runners Gulp kompiliert.\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_zusammenspiel_applikation.jpg}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_zusammenspiel_applikation}
 			\par\end{centering}
 			\caption{Zusammenspiel der Komponenten}
 			\label{Zusammenspiel der Komponenten}
