--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -262,9 +262,9 @@ void SendDebugInfo(unsigned int debug_info) {
     \label{Funktion_Multicopter}
   \end{figure}
 
-  \subsection{Erweiterte Funktion}
-  Im Rahmen dieser Diplomarbeit wurden die üblicherweise verwendeten Teile um vier weitere Komponenten erweitert, um einen automatischen Flug zu gewährleisten: eine Pixy CUMcam5, ein Ultraschallsensor, ein WLAN Modul und ein Mikrocontroller. Pixycam und Ultraschallsensor
-sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen Position des Hexacopters zu bestimmen. Im Mikrocontroller läuft ein Algorithmus, der aus diesen empfangen Daten die Position überprüft. Wenn der Wert vom optimalen Bereich abweicht, werden die Steuersignale abgeändert. Durch das Wlan-Modul bekommt der Mikrocontroller die Information, durch wie viele Marker der Weg definiert ist und welcher Farbcode der letzte ist, auf dem die Landung erfolgt.
+   \subsection{Erweiterte Funktion}
+    Im Rahmen dieser Diplomarbeit wurden die üblicherweise verwendeten Teile um vier weitere Komponenten erweitert, um einen automatischen Flug zu gewährleisten: eine Pixy CUMcam5, ein Ultraschallsensor, ein WLAN Modul und ein Mikrocontroller. Pixycam und Ultraschallsensor sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen Position des Hexacopters zu bestimmen. Im Mikrocontroller läuft ein Algorithmus, der aus diesen empfangen Daten die Position überprüft. Wenn der Wert vom optimalen Bereich abweicht, werden die Steuersignale abgeändert. Durch das Wlan-Modul bekommt der Mikrocontroller die Information, durch wie viele Marker der Weg definiert ist und welcher Farbcode der letzte ist, auf dem die Landung erfolgt.
+
 
   \subsection{Multicopter Arten}
   Es gibt verschiedene Arten von Multicoptern.
