ausbessern der \cite

--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -267,12 +267,12 @@ void SendDebugInfo(unsigned int debug_info) {
 
 
   \subsection{Multicopter Arten}
-  Es gibt verschiedene Arten von Multicoptern.
+  Es gibt verschiedene Arten von Multicoptern\cite{GrundlagenMulticopter}.
 
   Je nachdem wie viele Rotoren in einer Ebene liegen, setzt sich der Name zusammen.
-  Die bekannteste Art ist der Quadrocopter, welcher 4 Rotoren besitzt. Weiters gibt es Hexacopter mit 6 und Octocopter mit 8 Rotoren. \cite{GrundlagenMulticopter}
+  Die bekannteste Art ist der Quadrocopter, welcher 4 Rotoren besitzt. Weiters gibt es Hexacopter mit 6 und Octocopter mit 8 Rotoren.
 
-  Der Flightcontroller DJI Naza-M lite unterstützt verschiedene Konfigurationsarten von Quadrocoptern und Hexacoptern. Hierzu zählen + und x Konfiguration für den Quadrocopter. Beim Hexacopter gibt es die Varianten +, x, reverse Y und Y. Diese werden im nächsten Abschnitt genauer beschrieben. \cite{NAZA_Konfig}
+  Der Flightcontroller DJI Naza-M lite unterstützt verschiedene Konfigurationsarten\cite{NAZA_Konfig} von Quadrocoptern und Hexacoptern. Hierzu zählen + und x Konfiguration für den Quadrocopter. Beim Hexacopter gibt es die Varianten +, x, reverse Y und Y. Diese werden im nächsten Abschnitt genauer beschrieben. 
 
   \subsection{Konfiguration}
   Grundsätzlich gibt es 2 Arten einen Multicopter zu Konfigurieren. \cite{GrundlagenMulticopter}
