--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -46,7 +46,7 @@ Die einzelnen Zeichen werden dem WLAN-Modul in der ASCII-Codierung übermittelt,
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Schnittstelle Hexacopter}
-Autor: Lucas Ullrich\\
+Autor: Lucas Ullrich\\ \\
 Seitens des Hexacopters wird ein zusätzliches Modul benötigt, dieses muss über eine der Schnittstellen des Mikrocontrollers ansprechbar sein.
 
   \subsection{Technische Planung}
@@ -119,7 +119,7 @@ Um das WLAN-Modul so einzustellen, dass es sich Pin-gesteuert mit einem Host ver
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagebreak
 \section{Schnittstelle Applikation}
-Autor: Katharina Joksch\\
+Autor: Katharina Joksch\\ \\
 
   \subsection{Technische Planung}
 
