andere ajax quelle für bibliotheksversion

--- a/diplom.bib
+++ b/diplom.bib
@@ -529,7 +529,7 @@
 %kathi
 @online{ajax,
 	lastchecked = {2016-03-05},
-	url = {http://ajax.frozenfox.at},
+	url = {http://api.jquery.com/jquery.ajax/},
 	title = {Ajax}
 }
 
