Korrekturexemplar für Betreuer

--- a/diplom.bib
+++ b/diplom.bib
@@ -752,7 +752,21 @@
 @online{akustischeverfahren,
 	lastchecked = {2016-03-13},
 	url = {http://www.mikrocontroller.net/attachment/41716/projektarbeit.pdf},
-	title = { Meßtechniken und Schaltungsentwürfe zur hochpräzisen Abstandsmessung mit Ultraschall},
+	title = {Meßtechniken und Schaltungsentwürfe zur hochpräzisen Abstandsmessung mit Ultraschall},
+}
+
+%chrisy
+@online{Structs,
+	lastchecked = {2016-04-01},
+	url = {http://homepage.univie.ac.at/Heinz.Kabelka/edv-ueb/structur.htm},
+	title = {Benutzerdefinierte Datentypen},
+}
+
+%chrisy
+@online{Spektrum,
+	lastchecked = {2016-04-01},
+	url = {http://www.licht.de/de/trends-wissen/ueber-licht/was-ist-licht/lichtspektrum/},
+	title = {Das Lichtspektrum},
 }
 
 %alex
