--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -380,7 +380,7 @@ Ebenfalls bedanken wir uns bei unseren Individualbetreuern DI August Hörandl, M
 DI Franz Temper, die dem Projektteam als Ansprechpersonen für besondere Fragestellungen zur Seite gestanden
 sind.
 
-Martin Mair, Projektmanagement Lehrer der HTL Rennweg hat das Team motiviert und durch übermittlung seiner Erfahrungen unterstützt. Durch seine Hilfe war es uns möglich, von Salzburg aus am Accenture Finale Teilzunehmen.
+Martin Mair, Projektmanagement Lehrer der HTL Rennweg hat das Team motiviert und durch Übermittlung seiner Erfahrungen unterstützt. Durch seine Hilfe war es uns möglich, von Salzburg aus am Accenture Finale teilzunehmen.
 
 Peter Oppeker und Ruth Korper haben uns bei rechtlichen und finanziellen Fragen beraten.
 
