filEzilla und danksagung

--- a/diplom.bib
+++ b/diplom.bib
@@ -26,7 +26,7 @@
 	url = {http://de.wikipedia.org/w/index.php?title=Quellenangabe&oldid=131343956}
 }
 
-@online{ wiki:zitat,
+@online{wiki:zitat,
    author = "Wikipedia",
    title = "Zitat --- Wikipedia{,} Die freie Enzyklopädie",
    url = "http://de.wikipedia.org/w/index.php?title=Zitat&oldid=134064196",
@@ -299,7 +299,7 @@
 }
 
 % Markus: FileZilla
-@online{filazilla,
+@online{filezilla,
 	lastchecked = {2016-27-03},
 	url = {https://filezilla-project.org/client_features.php},
 	title = {FileZilla}
