--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -363,8 +363,6 @@ GRZ IT Center GmbH
 
 OFI
 
-DI Dr. Michael Pyerin
-
 EVO-tech GmbH
 
 
@@ -380,15 +378,14 @@ Ebenfalls bedanken wir uns bei unseren Individualbetreuern DI August Hörandl, M
 DI Franz Temper, die dem Projektteam als Ansprechpersonen für besondere Fragestellungen zur Seite gestanden
 sind.
 
-Martin Mair, Projektmanagement Lehrer der HTL Rennweg hat das Team motiviert und durch Übermittlung seiner Erfahrungen unterstützt. Durch seine Hilfe war es uns möglich, von Salzburg aus am Accenture Finale teilzunehmen.
+DI Martin Mair, Projektmanagement Lehrer der HTL Rennweg, hat das Team motiviert und durch Übermittlung seiner Erfahrungen unterstützt. Durch seine Hilfe war es uns möglich, von Salzburg aus am Accenture Finale teilzunehmen.
 
-Peter Oppeker und Ruth Korper haben uns bei rechtlichen und finanziellen Fragen beraten.
+Mag. Peter Oppeker und Mag. Ruth Korper haben uns bei rechtlichen und finanziellen Fragen beraten.
 
 
-Nicht zuletzt möchten wir unseren Dank unseren Partnern und Sponsoren, ganz besonders der \textbf{GRZ IT Center GmbH}
-ausdrücken, da wir die Diplomarbeit ohne ihre Unterstützung nicht in diesem Rahmen umsetzen hätten können.
+Ein riesengroßes Dankeschön gilt auch unseren Partnern und Sponsoren, ganz besonders unserem Hauptsponsor \textbf{GRZ IT Center GmbH}, da wir die Diplomarbeit ohne ihre Unterstützung nicht in diesem Rahmen umsetzen hätten können.
 
-Durch Gabriele Ettenberger vom \textbf{OFI}, wurden alle 2-4 Wochen Coachings abgehalten, die einerseits mit Teambuilding und Gruppendynamik, andererseits mit Projektmanagement und Gamestorming gefüllt waren.
+Durch Gabriele Ettenberger vom \textbf{OFI}, wurden alle 2 bis 4 Wochen Coachings abgehalten, die einerseits mit Teambuilding und Gruppendynamik, andererseits mit Projektmanagement und Gamestorming gefüllt waren, ebenso wurden wir von der Firma finanziell unterstützt.
 
 Die \textbf{EVO-tech GmbH} hat uns Druckmaterial für den 3D-Druck zur Verfügung gestellt.
 
@@ -396,9 +393,9 @@ Ein großes Dankeschön auch an den Verein Practical Robotics Institute Austria 
 
 Durch Natalia Zmajkovicova von der \textbf{twyn group} haben wir die Marketingwelt besser kennengelernt.
 
-Tina Lentschik von \textbf{WebBoost} hat uns Tipps und Tricks zu SEO verraten, dadurch konnte unser Blog optimiert werden. 
+Tina Lentschik von \textbf{WebBoost} hat uns Tipps und Tricks zu \cite{SEO} verraten, dadurch konnte unser Blog optimiert werden. 
 
-Durch \textbf{LivingPhotos by Michael Pyerin} wurden Team- und Portraitfotos gemacht, die das Team für Marketingzwecke auf Sozialen Medien und dem Blog genützt hat.
+Durch \textbf{LivingPhotos by Michael Pyerin} wurden Team- und Portraitfotos aufgenommen, die das Team für Marketingzwecke auf Sozialen Medien und dem Blog genützt hat.
 
 
 Folgende Personen haben uns während der Diplomarbeit unterstützt, ein großes Dankeschön!
@@ -413,7 +410,7 @@ Felix Lucny, Absolvent der HTL Rennweg, hat bei Problemen mit Frameworks geholfe
 
 Auch John Kulha, Schüler der HTL Rennweg, ist uns bei technischen Fragen rund um Java zur Seite gestanden.
 
-Danke an das Space Team der TU Wien, das uns in der Planungsphase mit Wissen über Positionierungssystemen geholfen hat.
+Danke an das Space Team der TU Wien, das uns in der Planungsphase mit Wissen über Positionierungssysteme geholfen hat.
 
 Danke an Roman Marchel, Deutschtrainer und freier Schriftsteller, hat uns bei der Korrektur des Diplomarbeitsbuchs unterstützt.
 
@@ -421,7 +418,7 @@ Durch Wolfram Bornberg wurden die Grundlagen von Mikrocontrollern erlernt.
 
 Isabella Bornberg und Josefine Dovits haben bei englischen Texten an mögliche Partner und Sponsoren geholfen.
 
-Zu guter letzt ein riesengroßes Dankeschön an Samantha Fuchs! Ohne sie wäre die Projektidee nie entstanden.
+Zu guter Letzt ein riesengroßes Dankeschön an Samantha Fuchs! Ohne sie wäre die Projektidee nie entstanden.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Verzeichnisse -- machen wir mit fancy headern
