--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -15,7 +15,6 @@ es gibt die Möglichkeit für ein Handover (Verbindungsübergabe) in sehr große
 Möglichkeiten, festzustellen ob die Verbindung noch aufrecht ist.
 
       \subsection{Kommunikationsschema}
-Autor: Lucas Ullrich\\ \\
 Für die Kommunikation zwischen dem Hexacopter und dem Server wurde folgendes Schema festgelegt:
 \begin{table}[H]
 \centering
@@ -121,7 +120,7 @@ Um das WLAN-Modul so einzustellen, dass es sich Pin-gesteuert mit einem Host ver
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagebreak
 \section{Schnittstelle Applikation}
-Autor: Katharina Joksch\\ \\
+Autor: Katharina Joksch\\
 
   \subsection{Technische Planung}
 
